# CIMCLCPP

./: .gitignore  CMakeLists.txt
core/: CMakeLists.txt  README.MD  TODO.MD
core/CClass/: CMakeLists.txt  tags
core/CClass/inc/: cclass.h
core/CClass/src/: cclass.c
core/CClass/test/: CMakeLists.txt  test.c  test_class.c  test_class.h
core/CIMCLCPP/: CMakeLists.txt  cimclcpp.h  project.h
core/DataStructures/: .gitignore  CMakeLists.txt  TODO.MD
core/DataStructures/Queue/inc/: queue.h
core/DataStructures/Queue/src/: queue.c
core/DataStructures/QueueBuffer/: CMakeLists.txt
core/DataStructures/QueueBuffer/inc/: queue_buffer.h
core/DataStructures/QueueBuffer/src/: queue_buffer.c
core/DataStructures/QueueBuffer/test/: CMakeLists.txt  test.c
core/DataStructures/RingBuffer/: CMakeLists.txt
core/DataStructures/RingBuffer/inc/: ring_buffer.h
core/DataStructures/RingBuffer/src/: ring_buffer.c
core/DataStructures/RingBuffer/test/: CMakeLists.txt  test.c
core/DataStructures/RobinQueueBuffer/: CMakeLists.txt  TODO.MD
core/DataStructures/RobinQueueBuffer/inc/: robin_queue_buffer.h
core/DataStructures/RobinQueueBuffer/src/: robin_queue_buffer.c
core/DataStructures/RobinQueueBuffer/test/: CMakeLists.txt  test.c
core/DataStructures/modbus_parser/: main.c  makefile  modbus_general.c  modbus_general.h  modbus_master.c  modbus_master.h  modbus_slave.c  modbus_slave.h
core/DataStructures/modbus_parser/docs/: Doxyfile
core/DataStructures/queue/: main.c  makefile  queue.c  queue.h
core/DataStructures/robin_queue/: robin_queue.c  robin_queue.h
core/IO/: CMakeLists.txt
core/IO/inc/: io.h
inc/: cimclcpp.h  class.h  control_block.h  project.h
src/: CMakeLists.txt  example_class.c  example_class.h
(+130 files in other folders)
